--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/*.py",
+      "src": "api/process.py",
       "use": "@vercel/python"
     }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1.py" }
   ]
 }
