--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,11 @@
       "src": "api/process.py",
       "use": "@vercel/python"
     }
+  ],
+  "routes": [
+    {
+      "src": "/api/process",
+      "dest": "/api/process.py"
+    }
   ]
 }
